--- a/mock/css/style.css
+++ b/mock/css/style.css
@@ -73,11 +73,11 @@ width: 30%;
 }
 .formMH4{
 position: relative;
-left: 30%;
-margin-top: 8%;
+left: 35%;
+margin-top: 5%;
 padding-left: 2%;
 border: 1px solid black;
-width: 30%;
+width: 28%;
 }
 #tblSearch{
 	border: 1px solid black;
@@ -89,3 +89,8 @@ width: 30%;
 	padding-left: 8%;
 }
 
+.img:hover{
+	cursor: pointer;
+	box-shadow:0px 0px 30px black;
+	
+}
