--- a/src/main/resources/templates/MH01.html
+++ b/src/main/resources/templates/MH01.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html  xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>LOGIN</title>
+    <title>Login</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 </head>
 <body>
 <div style=" width: 450px; margin: auto ;padding-top: 150px">
-  <!--  <div th:if="${errorMessage}" th:utext="${errorMeassage}" style="color :red"></div>-->
     <div>
         <form th:action="@{/login}" th:object="${loginForm}" method="post">
             <table>
+                <tr>
+                    <!--<td th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" ></td>
+                    <td th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></td>-->
+                </tr>
                 <tr>
                     <td colspan="2"> <h2 > Đăng Nhập Hệ Thống  </h2></td>
                 </tr>
@@ -33,7 +37,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align:center">
-                            <input type="submit" value="Đăng Nhập" name="login">
+                            <input type="submit" value="Đăng Nhập" />
                     </td>
                 </tr>
 
